--- a/views/app-post.handlebars
+++ b/views/app-post.handlebars
@@ -3,7 +3,7 @@
 <article class="new-page">
     <section class="new-form-page">
         <div class="form-heading">
-            <h2>Create New Post</h2>
+            <h2>Create New post</h2>
         </div>
         <div class="form-section">
             <form class="new-post-form">
