--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,24 +1,21 @@
-<section class="login-page">
-    <div class="form-heading">
-        <h1>Log In</h1>
-    </div>
-    <div class="form-section">
-        <form class="login-form">
-            <div>
-                <label for="username-login">Username</label>
-                <input type="text" class="entry-field" id="username-login" />
-            </div>
-            <div>
-                <label for="password-login">Password</label>
-                <input type="password" class="entry-field" id="password-login" />
-            </div>
-            <div>
-                <button type="submit" class="login-signup-btn">Log In!</button>
-            </div>
-        </form>
-    </div>
+<div class="row">
+  <div class="col justify-content-center">
+    <h2 class="login">Login</h2>
+    <form class="form login-form">
+      <div class="form-group">
+        <input class="form-input" type="text" placeholder="Username" id="username-login" />
+      </div>
+      <div class="form-group">
+        <input class="form-input" type="password" placeholder="Password" id="password-login" />
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">Login</button>
+      </div>
+      <div>
+        <a href="/signUp">Sign Up Instead</a>
+      </div>
+    </form>
+  </div>
+</div>
 
-    <a href="/signup" class="sign-in-link">sign up instead</a>
-</section>
-
-<script src="/javascript/login.js"></script>
+<script src="./js/login.js"></script>
