--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,139 +1,111 @@
 
-* {
-  box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+body {
+
+  background-image: url("https://videohive.net/item/retro-80s-video-game-background-4k-looped/28387442");
+
+  background-color: rgb(74, 79, 122);
 }
 
 
-#w3lDemoBar.w3l-demo-bar {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
-  padding: 40px 5px;
-  padding-top:70px;
-  margin-bottom: 70px;
-  background: #0D1326;
-  border-top-left-radius: 9px;
-  border-bottom-left-radius: 9px;
+.postBox {
+  margin-top: 8px;
+  border-style: solid;
+}
+.navTitle {
+  font-weight: 900;
+  font-size: xx-large;
+}
+.postDesc {
+  border-style: solid;
+  margin-bottom: 5px;
+  padding: 2px;
+  background-color: rgb(113, 143, 62);
 }
 
-#w3lDemoBar.w3l-demo-bar a {
-  display: block;
-  color: #e6ebff;
+.postTitle {
   text-decoration: none;
-  line-height: 24px;
-  opacity: .6;
-  margin-bottom: 20px;
-  text-align: center;
+  color: darkkhaki;
 }
 
-#w3lDemoBar.w3l-demo-bar span.w3l-icon {
-  display: block;
+.postDescTwo {
+  font-size: 25px;
+  font-style: italic;
 }
 
-#w3lDemoBar.w3l-demo-bar a:hover {
-  opacity: 1;
-}
-
-#w3lDemoBar.w3l-demo-bar .w3l-icon svg {
-  color: #e6ebff;
-}
-#w3lDemoBar.w3l-demo-bar .responsive-icons {
-  margin-top: 30px;
-  border-top: 1px solid #41414d;
-  padding-top: 40px;
-}
-#w3lDemoBar.w3l-demo-bar .demo-btns {
-  border-top: 1px solid #41414d;
-  padding-top: 30px;
-}
-#w3lDemoBar.w3l-demo-bar .responsive-icons a span.fa {
-  font-size: 26px;
-}
-#w3lDemoBar.w3l-demo-bar .no-margin-bottom{
-  margin-bottom:0;
-}
-.toggle-right-sidebar span {
-  background: #0D1326;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  color: #e6ebff;
-  border-radius: 50px;
-  font-size: 26px;
-  cursor: pointer;
-  opacity: .5;
-}
-.pull-right {
-  float: right;
-  position: fixed;
-  right: 0px;
-  top: 70px;
-  width: 90px;
-  z-index: 99999;
-  text-align: center;
-}
-/* ============================================================
-RIGHT SIDEBAR SECTION
-============================================================ */
-
-#right-sidebar {
-  width: 90px;
-  position: fixed;
-  height: 100%;
-  z-index: 1000;
-  right: 0px;
-  top: 0;
-  margin-top: 60px;
-  -webkit-transition: all .5s ease-in-out;
-  -moz-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  overflow-y: auto;
+.postDescMain {
+  font-weight: 700;
 }
 
 
-/* ============================================================
-RIGHT SIDEBAR TOGGLE SECTION
-============================================================ */
-
-.hide-right-bar-notifications {
-  margin-right: -300px !important;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+.postBoxCont {
+  margin-top: 10px;
+  border-style: solid;
+  background-color: rgb(113, 143, 62);
 }
 
-
-
-@media (max-width: 992px) {
-  #w3lDemoBar.w3l-demo-bar a.desktop-mode{
-      display: none;
-
-  }
+.formCont {
+  margin-top: 10px;
+  max-width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
-@media (max-width: 767px) {
-  #w3lDemoBar.w3l-demo-bar a.tablet-mode{
-      display: none;
 
-  }
+.postCreate {
+  font-weight: bold;
+  font-style: italic;
+  font-size: 15px;
+  padding: 5px;
+  color: darkkhaki;
 }
-@media (max-width: 568px) {
-  #w3lDemoBar.w3l-demo-bar a.mobile-mode{
-      display: none;
-  }
-  #w3lDemoBar.w3l-demo-bar .responsive-icons {
-      margin-top: 0px;
-      border-top: none;
-      padding-top: 0px;
-  }
-  #right-sidebar,.pull-right {
-      width: 90px;
-  }
-  #w3lDemoBar.w3l-demo-bar .no-margin-bottom-mobile{
-      margin-bottom: 0;
-  }
+
+.commentOwner {
+  font-size: 14px;
+}
+
+.commentCont {
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  max-width: 75%;
+  background-color: rgb(89, 97, 142);
+}
+
+.commentText {
+  font-weight: bold;
+  padding-top: 10px;
+  background-color: rgb(84, 89, 134);
+}
+.headerRow {
+  background-color: black;
+  margin-bottom: 15px;
+}
+.btnComment {
+  margin-top: 10px;
+}
+
+.commentCont {
+  border-style: dashed;
+}
+
+a:link {
+  color: rgb(200, 23, 23);
+}
+a:visited {
+  color: rgb(255, 155, 4);
+}
+
+a:hover {
+  color: rgb(87, 255, 20);
+}
+
+.signup{
+  margin-left: 30px;
+}
+
+.login{
+	margin-left: 30px;
+}
+
+.form-group{
+	margin-top: 15px;
 }
