--- a/views/app-post.handlebars
+++ b/views/app-post.handlebars
@@ -1,24 +1,39 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<div class="text">
+	<div class="container postBoxCont">
+		<div class="row headerRow">
+			<div class="col-8">
+				<h2 class="postTitle text-uppercase">{{title}}</h2>
+			</div>
+			<div class="col-4">
+				<p class="postCreate text-right">Created by {{user.username}} on {{format_date date_created}}</p>
+			</div>
+		</div>
+		<p class="text-center postDescTwo">{{description}}</p>
+		</div>	
+</div>
 
-<article class="new-page">
-    <section class="new-form-page">
-        <div class="form-heading">
-            <h2>Create New post</h2>
-        </div>
-        <div class="form-section">
-            <form class="new-post-form">
-                <div class="post-title-section">
-                    <label for="post-title">Title</label>
-                    <input type="text" id="post-title" name="post-title" />
-                </div>
-                <div class="post-content">
-                    <label for="post-content">Content</label>
-                    <textarea class="entry-field" id="post-content" name="post-content"></textarea>
-                </div>
-                <button type="submit" class="btn">Create</button>
-            </form>
-        </div>
-    </section>
-</article>
+		{{#if logged_in}}
 
-<script src="/javascript/add-post.js"></script>
+		<form class="new-comment-form formCont d-flex flex-wrap justify-content-center" data-postid={{id}}>
+			<div class="textAreaCont p-2">
+				<textarea id='comment_description' name="comment-body"
+				placeholder="Enter a comment here..."
+				cols="30"
+				rows="2"></textarea>
+			</div>
+			<div class="btnComment p-2">
+				<button class="button btn btn-success" type="submit">Add Comment</button>
+			</div>
+		</form>
+
+		{{/if}}
+
+		<h2 class="text-center">Comments</h2>
+		{{#each comments as |comment|}}
+		<div class="commentCont">
+			<p class="text-center commentText">{{comment.comment_description}}</p>
+			<p class="text-center commentOwner"><span>~</span>Created by {{comment.user.username}} on {{format_date date_created}}<span>~</span></p>
+		</div>
+		{{/each}}
+
+		<script src="/js/comments.js"></script>
