--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,30 @@
-<ul class="post-list">
-    {{#each posts as |post|}}
-    <li>
-        {{> post-info post }}
-    </li>
-    {{/each}}
-</ul>
+{{#each posts as |post|}}
+
+  <div class="row">
+
+    <div class="container postBox">
+			<div class="row  justify-content-center headerRow">
+      <div class="col-8">
+        <h2>
+          <a class="postTitle text-uppercase" href="/post/{{post.id}}">{{post.title}}</a>
+        </h2>
+      </div>
+
+      <div class="col-4">
+        <p class="postCreate text-right">Created by
+          {{post.user.username}}
+          on
+          {{format_date post.date_created}}
+        </p>
+      </div>
+			</div>
+    <div class="postDesc">
+      <p class="text-center postDescMain">
+        {{post.description}}
+      </p>
+    </div>
+    </div>
+
+  </div>
+
+{{/each}}
