--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,24 +1,22 @@
-<section class="sign-in-page">
-    <div class="form-heading">
-        <h1>Sign Up</h1>
-    </div>
-    <div class="form-section">
-        <form class="signup-form">
-            <div>
-                <label for="username-signup">Select a Username</label>
-                <input type="text" class="entry-field" id="username-signup" />
-            </div>
-            <div>
-                <label for="password-signup">Select a password</label>
-                <input type="password" class="entry-field" id="password-signup" />
-            </div>
-            <div>
-                <button type="submit" class="login-signup-btn">Sign Up!</button>
-            </div>
-        </form>
+<div>
+  <h2 class="signup">Sign Up</h2>
+
+  <form class="form signup-form">
+    <div class="form-group">
+      <input class="form-input" type="text" placeholder="Username" id="username-signup" />
     </div>
 
-    <a href="/login" class="login-link">log in instead</a>
-</section>
+    <div class="form-group">
+      <input class="form-input" type="password" placeholder="Password" id="password-signup" />
+    </div>
 
-<script src="/javascript/signup.js"></script>
+    <div class="form-group">
+      <button class="btn btn-primary" type="submit">Signup</button>
+    </div>
+  </form>
+  <div>
+    <a href="/login">Login Instead</a>
+  </div>
+</div>
+
+<script src="./js/signUp.js"></script>
