updated the models for Game.js i couldnt get th ebuttons for the game search engine to work however. Still researching

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,3 +5,48 @@
     </li>
     {{/each}}
 </ul>
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./stylesheets/style.css">
+    <title>G3-Station</title>
+    <h2> "Your favorite video game social media is now here!</h2>
+</head>
+
+<body>
+    <input id="search-games" type="text" placeholder="search" />
+    <button id="search">Click Here To Search Games!</button>
+
+    <div class="current">
+        <div class="location">
+            <h1 class="location-timezone">Time</h1>
+            <div class="Icon">Icon <img class="Iconimg" /></div> <span id="cityName">city</span>
+
+        </div>
+        <div class="temperature">
+            <div class="degeree-section">
+                <h2 class="temperature-degree"><span id="temp">temp</span></h2><span>F</span>
+            </div>
+            <div class="temperature-description">
+            </div>
+        </div>
+    </div>
+
+   
+    
+    
+
+
+
+
+    <script src="./public/javascript/getGames.js"></script>
+</body>
+
+
+</html>
