--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,10 +12,10 @@
         <button class="btn btn-primary" type="submit">Login</button>
       </div>
       <div>
-        <a href="/signUp">Sign Up Instead</a>
+        <a href="/G3-station/public/javascript/signup.js">Sign Up Instead</a>
       </div>
     </form>
   </div>
 </div>
 
-<script src="./js/login.js"></script>
+<script src="/G3-station/public/javascript/login.js"></script>
