--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -15,8 +15,8 @@
     </div>
   </form>
   <div>
-    <a href="/login">Login Instead</a>
+    <a href="/G3-station/public/javascript/login.js">Login Instead</a>
   </div>
 </div>
 
-<script src="./js/signUp.js"></script>
+<script src="/G3-station/public/javascript/signup.js"></script>
