--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,4 +1,4 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
+<a href="/G3-station/public/javascript/dashboard.js" class="go-back"> &larr; Back to dashboard</a>
 <br>
 <br>
 
@@ -19,5 +19,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="/G3-station/public/javascript/comment.js"></script>
 {{/if}}
