--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,139 +1,178 @@
-
 * {
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
-
-#w3lDemoBar.w3l-demo-bar {
-  top: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 9999;
-  padding: 40px 5px;
-  padding-top:70px;
-  margin-bottom: 70px;
-  background: #0D1326;
-  border-top-left-radius: 9px;
-  border-bottom-left-radius: 9px;
-}
-
-#w3lDemoBar.w3l-demo-bar a {
-  display: block;
-  color: #e6ebff;
-  text-decoration: none;
-  line-height: 24px;
-  opacity: .6;
-  margin-bottom: 20px;
-  text-align: center;
-}
-
-#w3lDemoBar.w3l-demo-bar span.w3l-icon {
-  display: block;
-}
-
-#w3lDemoBar.w3l-demo-bar a:hover {
-  opacity: 1;
-}
-
-#w3lDemoBar.w3l-demo-bar .w3l-icon svg {
-  color: #e6ebff;
-}
-#w3lDemoBar.w3l-demo-bar .responsive-icons {
-  margin-top: 30px;
-  border-top: 1px solid #41414d;
-  padding-top: 40px;
-}
-#w3lDemoBar.w3l-demo-bar .demo-btns {
-  border-top: 1px solid #41414d;
-  padding-top: 30px;
-}
-#w3lDemoBar.w3l-demo-bar .responsive-icons a span.fa {
-  font-size: 26px;
-}
-#w3lDemoBar.w3l-demo-bar .no-margin-bottom{
-  margin-bottom:0;
-}
-.toggle-right-sidebar span {
-  background: #0D1326;
-  width: 50px;
-  height: 50px;
-  line-height: 50px;
-  text-align: center;
-  color: #e6ebff;
-  border-radius: 50px;
-  font-size: 26px;
-  cursor: pointer;
-  opacity: .5;
-}
-.pull-right {
-  float: right;
-  position: fixed;
-  right: 0px;
-  top: 70px;
-  width: 90px;
-  z-index: 99999;
-  text-align: center;
-}
-/* ============================================================
-RIGHT SIDEBAR SECTION
-============================================================ */
-
-#right-sidebar {
-  width: 90px;
-  position: fixed;
+body, html {
   height: 100%;
-  z-index: 1000;
-  right: 0px;
-  top: 0;
-  margin-top: 60px;
-  -webkit-transition: all .5s ease-in-out;
-  -moz-transition: all .5s ease-in-out;
-  -o-transition: all .5s ease-in-out;
-  transition: all .5s ease-in-out;
-  overflow-y: auto;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  color: #333;
 }
 
-
-/* ============================================================
-RIGHT SIDEBAR TOGGLE SECTION
-============================================================ */
-
-.hide-right-bar-notifications {
-  margin-right: -300px !important;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
-  transition: all .3s ease-in-out;
+a {
+  text-decoration: none;
+  color: #225ca3;
+  font-weight: bold;
+  transition: color .1s;
 }
 
-
-
-@media (max-width: 992px) {
-  #w3lDemoBar.w3l-demo-bar a.desktop-mode{
-      display: none;
-
-  }
+a:hover {
+  color: #3486eb;
 }
-@media (max-width: 767px) {
-  #w3lDemoBar.w3l-demo-bar a.tablet-mode{
-      display: none;
 
-  }
+button {
+  background-color: #225ca3;
+  border: 0;
+  padding: 1%;
+  color: white;
+  font-weight: bold;
+  transition: background-color .1s;
+  cursor: pointer;
+  border-radius: 5px;
 }
-@media (max-width: 568px) {
-  #w3lDemoBar.w3l-demo-bar a.mobile-mode{
-      display: none;
-  }
-  #w3lDemoBar.w3l-demo-bar .responsive-icons {
-      margin-top: 0px;
-      border-top: none;
-      padding-top: 0px;
-  }
-  #right-sidebar,.pull-right {
-      width: 90px;
-  }
-  #w3lDemoBar.w3l-demo-bar .no-margin-bottom-mobile{
-      margin-bottom: 0;
-  }
+
+button:hover {
+  background-color: #3486eb;
+}
+
+.post-list {
+  margin: 0;
+  padding: 0;
+}
+
+textarea, input {
+  padding: .5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+textarea:focus, input:focus {
+  outline: none;
+  border: 1px solid #3486eb;
+}
+
+textarea {
+  min-width: 40%;
+  min-height: 100px;
+}
+
+form > div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+}
+
+header h1 {
+  font-size: 1em;
+}
+
+main {
+  flex: 1;
+  padding: 2% 4%;
+}
+
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  color: #225ca3;
+  font-size: 100%;
+  font-weight: bold;
+  transition: color .1s;
+  margin-left: 16px;
+}
+
+.btn-no-style:hover {
+  background: none;
+  color: #3486eb;
+}
+
+.delete-post-btn {
+  background-color: #d41414;
+}
+
+.delete-post-btn:hover {
+  background-color: #ff643d;
+}
+
+.post {
+  margin-bottom: 2%;
+  line-height: 150%;
+}
+
+.post .title span {
+  font-style: italic;
+  font-size: 90%;
+  color: #7d7d7d;
+}
+
+.edit-link {
+  display: block;
+  margin: -1.5% 0 2% 0;
+}
+
+.upvote-btn {
+  background-color: #197d0f;
+  transition: background-color .1s;
+}
+
+.upvote-btn:hover {
+  background-color: #1f9c13;
+}
+
+.comment-form {
+  margin-bottom: 5%;
+}
+
+.comment {
+  padding: 1%;
+  margin-bottom: 1%;
+}
+
+.comment:nth-child(odd) {
+  background-color: #fff5eb;
+}
+
+.comment .meta {
+  font-size: 90%;
+  margin-bottom: .5%;
+  opacity: .6;
+}
+
+.new-post-form input {
+  width: 300px;
+}
+
+.edit-post-form {
+  margin-bottom: 5%;
+}
+
+footer {
+  border-top: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  padding: 1%;
+  font-size: 110%;
 }
