--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Tech Blog</title>
-    <link rel="stylesheet" href="/G3-station/stylesheets/style.css">
+    <title>G3-station</title>
+    <link rel="stylesheet" href="/public/stylesheets/style.css">
 </head>
 
 <body>
