created links for handlebars to other js files for styling

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,6 @@
     <button type="submit" class="btn" id="create-new-post">+ Create new post</button>
 </section>
 
-
 {{#if posts.length}}
 <section>
     <h2>Your Dashboard</h2>
@@ -17,4 +16,4 @@
 </section>
 {{/if}}
 
-<script src="/javascript/create-post.js"></script>
+<script src="/public/javascript/add-post.js"></script>
