--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,33 +7,32 @@ body, html {
   padding: 0;
   margin: 0;
   font-family: sans-serif;
-  color: #333;
+  color: rgb(184, 88, 88);
 }
 
 a {
   text-decoration: none;
-  color: #225ca3;
+  color: #10141a;
   font-weight: bold;
-  transition: color .1s;
 }
 
 a:hover {
-  color: #3486eb;
+  color: #5d738f;
 }
 
 button {
-  background-color: #225ca3;
+  background-color: #22a387;
   border: 0;
   padding: 1%;
-  color: white;
+  color: rgb(219, 23, 23);
   font-weight: bold;
   transition: background-color .1s;
   cursor: pointer;
-  border-radius: 5px;
+  border-radius: 10px;
 }
 
 button:hover {
-  background-color: #3486eb;
+  background-color: #34eba5;
 }
 
 .post-list {
@@ -42,14 +41,14 @@ button:hover {
 }
 
 textarea, input {
-  padding: .5%;
-  border-radius: 5px;
-  border: 1px solid #ccc;
+  padding: .3%;
+  border-radius: 10px;
+  border: 2px solid rgb(114, 165, 142);
 }
 
 textarea:focus, input:focus {
   outline: none;
-  border: 1px solid #3486eb;
+  border: 2px solid #3486eb;
 }
 
 textarea {
