--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
             </h1>
             <nav>
                 {{#if loggedIn}}
-                <a href="/dashboard">dashboard</a>
+                <a href="/views/dashboard.handlebars">dashboard</a>
                 <button id="logout" class="btn-no-style logout">logout</button>
                 {{else}}
                 <a href="/login">login</a>
