pulled handlebars code from dev branch for comments

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
                 <a href="/views/dashboard.handlebars">dashboard</a>
                 <button id="logout" class="btn-no-style logout">logout</button>
                 {{else}}
-                <a href="/login">login</a>
+                <a href="/public/javascript/login.js">login</a>
                 {{/if}}
             </nav>
         </header>
@@ -34,7 +34,7 @@
     </div>
 
     {{#if loggedIn}}
-    <script src="/javascript/logout.js"></script>
+    <script src="/public/javascript/logout.js"></script>
     {{/if}}
 </body>
 
