--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,7 +18,7 @@
         </form>
     </div>
 
-    <a href="/login" class="login-link">log in instead</a>
+    <a href="/public/javascript/login.js" class="login-link">log in instead</a>
 </section>
 
-<script src="/javascript/signup.js"></script>
+<script src="/public/javascript/signup.js"></script>
