--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,6 +1,6 @@
-<div class="comments">
+<div class="game-post comments">
   {{#each this}}
-  <section class="comment">
+  <section class="games post">
     <div class="meta">
       {{user.username}} on {{format_date created_at}}
     </div>
