--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,23 +1,21 @@
-<a href="/dashboard" class="go-back"> &larr; Back to dashboard</a>
-<br>
-<br>
-
 {{> post-info post}}
 
 {{#if loggedIn}}
 <form class="comment-form">
-    <div>
-        <textarea name="comment-body"></textarea>
-    </div>
+  <div>
+    <textarea name="comment-body"></textarea>
+  </div>
 
-    <div>
-        <button type="submit">add comment</button>
-    </div>
+  <div>
+    <button type="submit">add comment</button>
+    <button type="button" class="upvote-btn">upvote</button>
+  </div>
 </form>
 {{/if}}
 
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="/public/javascript/comment.js"></script>
+<script src="/public/javascript/upvote.js"></script>
 {{/if}}
