Resolved all branch merging issues and imported code from other branches successfully

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,5 +1,5 @@
 <section>
-  <h2>Add your favorite games!</h2>
+  <h2>Post your favorite games!</h2>
 
   <form class="new-post-form">
     <div>
@@ -28,4 +28,4 @@
 </section>
 {{/if}}
 
-<script src="/public/javascript/add-post.js"></script>
+<script src="/javascript/add-post.js"></script>
