--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,12 +1,22 @@
-<div>
-  <h2 class="signup">Sign Up</h2>
+<form class="signup-form">
+  <div>
+    <label for="username-signup">username:</label>
+    <input type="text" id="username-signup" />
+  </div>
+  <div>
+    <label for="email-signup">email:</label>
+    <input type="text" id="email-signup" />
+  </div>
+  <div class="column is-11 m-3 pr-5">
+    <label for="password-signup">password:</label>
+    <input type="password" id="password-signup" />
+  </div>
+  <div>
+    <button type="submit">Sign-up!</button>
+  </div>
+  <div>
+    <button><a href="/login">Login instead</a></button>
+  </div>
+</form>
 
-  <form class="form signup-form">
-    <div class="form-group">
-      <input class="form-input" type="text" placeholder="Username" id="username-signup" />
-    </div>
-
-    <a href="/public/javascript/login.js" class="login-link">log in instead</a>
-</section>
-
-<script src="/public/javascript/signup.js"></script>
+<script src="/javascript/signup.js"></script>
