made minor changes with commas in several files

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,10 +24,11 @@
         <ul class="inline-nav">
           {{#if loggedIn}}
             <li> <a href="/dashboard">Dashboard</a></li>
+            <li> <a href="/add-post">Create post</a></li>
             <li> <a href="/login" id="logout">Logout</a> </li>
           {{else}}
             <li><a href="/login"> Login </a></li>
-            <li><a href="/signup">Sign-up</a> </li>
+            <li><a href="/signup">Sign-up</a></li>
           {{/if}}
         </ul>
       </nav>
